@@ -33,6 +33,7 @@ module.exports = {
     name: 'help',
     aliases: ['helpme', 'how', '?', 'tasukete', 'tolong', 'request'],
     description: 'Shows the command list and its description',
+    category: 'Information',
     /**
      * executes the command
      * 
@@ -48,12 +49,17 @@ module.exports = {
         if (args.length > 0) {
             const command = fetchCommand(args[0]);
 
+            if (!command) {
+                return message.channel.send('Cannot find any command or aliases like `' + args[0] + '`!')
+            }
+
             const embed = new Discord.RichEmbed()
                 .setAuthor('Help command for ' + command.name)
                 .setDescription(
                     '**Name:** `' + command.name + '`\n'
                     + '**Aliases:** `[' + command.aliases.join(', ') + ']`\n'
                     + '**Description:** `' + command.description + '`\n'
+                    + '**Category:** `' + command.category + '`'
                 )
                 .setColor('RANDOM')
                 .setFooter('Executed by ' + member.user.username, member.user.displayAvatarURL);
