@@ -1,6 +1,7 @@
 exports.name = '';
 exports.aliases = ['', ''];
 exports.description = '';
+exports.category = '';
 exports.disabled = false;
 exports.execute = async function (message, args) {
 
